--- a/index.html
+++ b/index.html
@@ -1,84 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Therapist Business</title>
+  <title>My Simple Website</title>
   <style>
-    /* Add your CSS styles here */
+    /* CSS for the navigation bar */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    .navbar {
+      background-color: #333;
+      overflow: hidden;
+    }
+
+    .navbar a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    .navbar a.active {
+      background-color: #4CAF50;
+      color: white;
+    }
+
+    /* CSS for the page content */
+    .content {
+      padding: 16px;
+    }
+
+    /* CSS for footer */
+    footer {
+      background-color: #f2f2f2;
+      padding: 20px;
+      text-align: center;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
-  <!-- Navigation bar -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="testimonials.html">Testimonials</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <!-- Navigation Bar -->
+  <div class="navbar">
+    <a class="active" href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </div>
 
-  <!-- Home Page -->
-  <section id="home">
-    <h1>Welcome to our Therapist Business</h1>
-    <p>Providing compassionate therapy services for your well-being.</p>
-    <a href="contact.html" class="cta-button">Schedule an Appointment</a>
-  </section>
-
-  <!-- About Page -->
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Write a compelling description of your therapy practice and your expertise.</p>
-    <p>Highlight your approach, philosophy, and the clients you serve.</p>
-  </section>
-
-  <!-- Services Page -->
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Service 1</li>
-      <li>Service 2</li>
-      <li>Service 3</li>
-      <!-- Add more services as needed -->
-    </ul>
-  </section>
-
-  <!-- Testimonials Page -->
-  <section id="testimonials">
-    <h2>Client Testimonials</h2>
-    <div class="testimonial">
-      <blockquote>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor metus vel tortor ultrices."</p>
-      </blockquote>
-      <cite>Client Name</cite>
-    </div>
-    <!-- Add more testimonials as needed -->
-  </section>
-
-  <!-- Resources Page -->
-  <section id="resources">
-    <h2>Resources</h2>
-    <ul>
-      <li><a href="article1.html">Article 1</a></li>
-      <li><a href="article2.html">Article 2</a></li>
-      <li><a href="article3.html">Article 3</a></li>
-      <!-- Add more resources as needed -->
-    </ul>
-  </section>
-
-  <!-- Contact Page -->
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Get in touch with us to schedule an appointment or ask any questions.</p>
-    <p>Phone: 123-456-7890</p>
-    <p>Email: info@example.com</p>
-  </section>
+  <!-- Page Content -->
+  <div class="content">
+    <h1>Welcome to My Simple Website</h1>
+    <p>This is a sample website with a stylish navigation bar.</p>
+  </div>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2023 Therapist Business. All rights reserved.</p>
+    &copy; 2023 My Simple Website. All rights reserved.
   </footer>
-
 </body>
 </html>
