--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- Navigation Bar -->
   <div class="navbar">
     <a class="active" href="#">Home</a>
-    <a href="#">About</a>
+    <a href="about.html">About</a>
     <a href="#">Services</a>
     <a href="#">Contact</a>
   </div>
