--- a/index.html
+++ b/index.html
@@ -54,19 +54,11 @@
   <div class="navbar">
     <a class="active" href="#">Home</a>
     <a href="about.html">About</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="credits.html">Credits</a>
   </div>
 
-  <!-- Page Content -->
-  <div class="content">
-    <h1>Welcome to My Simple Website</h1>
-    <p>This is a sample website with a stylish navigation bar.</p>
-  </div>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2023 My Simple Website. All rights reserved.
-  </footer>
 </body>
 </html>
