--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Simple Website</title>
+  <title>Responsive Menu</title>
   <style>
-    /* CSS for the navigation bar */
     body {
       margin: 0;
       padding: 0;
@@ -12,53 +11,112 @@
 
     .navbar {
       background-color: #333;
-      overflow: hidden;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 9999;
     }
 
-    .navbar a {
+    .navbar .menu-toggle {
+      display: none;
+    }
+
+    .navbar label {
+      display: none;
+      cursor: pointer;
+      padding: 15px;
+      color: #f2f2f2;
+      font-size: 20px;
+    }
+
+    .navbar label span {
+      display: block;
+      width: 25px;
+      height: 3px;
+      background-color: #f2f2f2;
+      margin: 5px 0;
+    }
+
+    .navbar ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333;
+    }
+
+    .navbar ul li {
       float: left;
+    }
+
+    .navbar ul li a {
       display: block;
       color: #f2f2f2;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
-      font-size: 17px;
     }
 
-    .navbar a:hover {
+    .navbar ul li a:hover {
       background-color: #ddd;
       color: black;
     }
 
-    .navbar a.active {
-      background-color: #4CAF50;
-      color: white;
+    .navbar .menu-toggle:checked ~ ul {
+      display: block;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: #333;
+      z-index: 9998;
+      padding-top: 60px;
     }
 
-    /* CSS for the page content */
-    .content {
-      padding: 16px;
-    }
-
-    /* CSS for footer */
-    footer {
-      background-color: #f2f2f2;
-      padding: 20px;
+    .navbar .menu-toggle:checked ~ ul li {
+      float: none;
+      width: 100%;
       text-align: center;
-      font-size: 14px;
+    }
+
+    .navbar .menu-toggle:checked ~ ul li a {
+      display: block;
+      text-align: center;
+      padding: 20px;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
   <!-- Navigation Bar -->
   <div class="navbar">
-    <a class="active" href="#">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-    <a href="credits.html">Credits</a>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
   </div>
 
+  <!-- Page Content -->
+  <div class="content">
+    <h1>Welcome to My Website</h1>
+    <p>This is a sample website with a responsive navigation menu.</p>
+  </div>
 
+  <script>
+    // JavaScript to toggle the menu on click
+    document.getElementById('menu-toggle').addEventListener('change', function() {
+      document.body.classList.toggle('menu-open');
+    });
+  </script>
 </body>
 </html>
