--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Responsive Menu</title>
+  <title>Dropdown Navigation Bar</title>
   <style>
     body {
       margin: 0;
@@ -11,112 +11,91 @@
 
     .navbar {
       background-color: #333;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 9999;
-    }
-
-    .navbar .menu-toggle {
-      display: none;
-    }
-
-    .navbar label {
-      display: none;
-      cursor: pointer;
-      padding: 15px;
-      color: #f2f2f2;
-      font-size: 20px;
-    }
-
-    .navbar label span {
-      display: block;
-      width: 25px;
-      height: 3px;
-      background-color: #f2f2f2;
-      margin: 5px 0;
-    }
-
-    .navbar ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
       overflow: hidden;
-      background-color: #333;
     }
 
-    .navbar ul li {
+    .navbar .dropdown {
       float: left;
+      overflow: hidden;
     }
 
-    .navbar ul li a {
-      display: block;
+    .navbar .dropdown .dropbtn {
+      font-size: 16px;
+      border: none;
+      outline: none;
       color: #f2f2f2;
-      text-align: center;
       padding: 14px 16px;
-      text-decoration: none;
+      background-color: inherit;
+      margin: 0;
     }
 
-    .navbar ul li a:hover {
-      background-color: #ddd;
-      color: black;
+    .navbar .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
     }
 
-    .navbar .menu-toggle:checked ~ ul {
-      display: block;
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      background-color: #333;
-      z-index: 9998;
-      padding-top: 60px;
-    }
-
-    .navbar .menu-toggle:checked ~ ul li {
+    .navbar .dropdown-content a {
       float: none;
-      width: 100%;
-      text-align: center;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
     }
 
-    .navbar .menu-toggle:checked ~ ul li a {
+    .navbar .dropdown-content a:hover {
+      background-color: #ddd;
+    }
+
+    .navbar .dropdown:hover .dropdown-content {
       display: block;
-      text-align: center;
-      padding: 20px;
-      font-size: 18px;
+    }
+
+    .navbar .dropdown .dropbtn::after {
+      content: "\25BC";
+      font-size: 12px;
+      color: #f2f2f2;
+      margin-left: 5px;
     }
   </style>
 </head>
 <body>
   <!-- Navigation Bar -->
   <div class="navbar">
-    <input type="checkbox" id="menu-toggle" class="menu-toggle">
-    <label for="menu-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+    <div class="dropdown">
+      <button class="dropbtn">Button 1</button>
+      <div class="dropdown-content">
+        <a href="#">Option 1</a>
+        <a href="#">Option 2</a>
+        <a href="#">Option 3</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn">Button 2</button>
+      <div class="dropdown-content">
+        <a href="#">Option 1</a>
+        <a href="#">Option 2</a>
+        <a href="#">Option 3</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn">Button 3</button>
+      <div class="dropdown-content">
+        <a href="#">Option 1</a>
+        <a href="#">Option 2</a>
+        <a href="#">Option 3</a>
+      </div>
+    </div>
   </div>
 
   <!-- Page Content -->
   <div class="content">
     <h1>Welcome to My Website</h1>
-    <p>This is a sample website with a responsive navigation menu.</p>
+    <p>This is a sample website with a dropdown navigation bar.</p>
   </div>
-
-  <script>
-    // JavaScript to toggle the menu on click
-    document.getElementById('menu-toggle').addEventListener('change', function() {
-      document.body.classList.toggle('menu-open');
-    });
-  </script>
 </body>
 </html>
