--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
 
     .navbar {
-      background-color: #333;
+      background-color: #4CAF50; /* Green color */
       overflow: hidden;
     }
 
